syntax = "proto3";

option java_package = "com.example.poc.grpc";

import "input_csv_file_processing_svc.proto";
import "payments_processing_svc.proto";
import "output_csv_file_processing_svc.proto";
import "payment_status_svc.proto";

service PersistPaymentRecordService {
  rpc remoteProcess(PaymentRecord) returns (PaymentRecord);
}

service PersistAckPaymentSentService {
  rpc remoteProcess(AckPaymentSent) returns (AckPaymentSent);
}

service PersistCsvPaymentsInputFileService {
  rpc remoteProcess(CsvPaymentsInputFile) returns (CsvPaymentsInputFile);
}

service PersistCsvPaymentsOutputFileService {
  rpc remoteProcess(CsvPaymentsOutputFile) returns (CsvPaymentsOutputFile);
}

service PersistPaymentOutputService {
  rpc remoteProcess(PaymentOutput) returns (PaymentOutput);
}

service PersistPaymentStatusService {
  rpc remoteProcess(PaymentStatus) returns (PaymentStatus);
}

service PersistCsvFolderService {
  rpc remoteProcess(CsvFolder) returns (CsvFolder);
}
